vm (8.1.2-1) unstable; urgency=low

  * New upstream release

 -- Manoj Srivastava <srivasta@debian.org>  Sat, 27 Apr 2013 22:09:15 -0700

vm (8.1.0-1) unstable; urgency=low

  * New upstream version
  * [20fe869]: Merge branch 'upstream' into topic--debian
  * Bug fix: "sc-cite-original citation hook fails for mime encoded
    messages", thanks to Klaus Reichl              (Closes: #550859).
  * Bug fix: "8bit characters are not escapes in In-reply-to field",
    thanks to Neil Brown                           (Closes: #434565).
  * Bug fix: "vm-mime-encode-headers may mess up recipient addresses",
    thanks to Francois Fleuret                     (Closes: #553402).

 -- Manoj Srivastava <srivasta@debian.org>  Sun, 28 Mar 2010 08:03:45 -0700

vm (8.0.13-1) unstable; urgency=low

  * New upstream release. The project isunder new management now. This is
    a bug fixing release, which handles a flaw in caching.

 -- Manoj Srivastava <srivasta@debian.org>  Sun, 29 Nov 2009 11:48:54 -0600

vm (8.0.12-7) unstable; urgency=low

  * Told lintian to stop parsing old changelogs.

 -- Manoj Srivastava <srivasta@debian.org>  Sun, 01 Nov 2009 20:21:57 -0600

vm (8.0.12-6) unstable; urgency=low

  * Take extra care to remove cruft during remove and/or purge.

 -- Manoj Srivastava <srivasta@debian.org>  Tue, 20 Oct 2009 09:59:26 -0500

vm (8.0.12-5) unstable; urgency=low

  * [e457f1c]: [topic--debian]: remove references to vm-easymenu
    Bug fix: "vm.el still references vm-easymenu, which has gone", thanks
    to Klaus Reichl                                    (Closes: #470263).

 -- Manoj Srivastava <srivasta@debian.org>  Mon, 12 Oct 2009 22:59:37 -0500

vm (8.0.12-4) unstable; urgency=low

  * New release to bring package into conformance with latest policy.
  * [88e374f]: [vm]: Info files are now installed using triggers

 -- Manoj Srivastava <srivasta@debian.org>  Sun, 16 Aug 2009 16:58:04 -0500

vm (8.0.12-3) unstable; urgency=low

  * A new, bug fixing release.