@@ -18,8 +18,7 @@
 set -e
 
 FLAVOUR=$1
-PACKAGE="=P"
-VERSION="=V"
+PACKAGE="vm"
 
 if [ "X$FLAVOUR" = "X" ]; then
     echo Need argument to determin FLAVOUR of emacs;
@@ -30,14 +29,6 @@ if [ "X$PACKAGE" = "X" ]; then
     echo Internal error: need package name;
     exit 1;
 fi
-
-if [ "X$VERSION" = "X" ]; then
-    echo Internal error: need package version;
-    exit 1;
-fi
-
-
-
 
 
 ELDIR=/usr/share/emacs/site-lisp/$PACKAGE
@@ -53,7 +44,7 @@ CORE="vm-message.el vm-misc.el vm-byteopts.el"
 STAMPFILE=vm-autoload.elc
 
 case "$FLAVOUR" in
-    emacs22|emacs23|emacs-snapshot|xemacs21)
+    emacs24|emacs23|emacs-snapshot|xemacs21)
 	echo -n "install/$PACKAGE: Byte-compiling for $FLAVOUR..."
         case $FLAVOUR in
             emacs*)
